<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF9800"
    android:orientation="vertical"
    tools:context=".Splash">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="sans-serif-medium"
        android:text="@string/descricao_bank"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/nomeBanco"
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:layout_weight="1"
        android:autoText="false"
        android:fontFamily="sans-serif-black"
        android:text="@string/nome_banco"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="72sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_weight="1"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/sigla_banco"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="180sp" />

</LinearLayout>