<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/nomeBanco"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/nome_banco"
        android:textAlignment="center"
        android:textColor="#FF5722"
        android:textSize="44sp" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="#494949"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="80dp"
        android:text="@string/login"
        android:textAlignment="inherit"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/login"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/senha"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/senha"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:background="@android:color/holo_orange_dark"
        android:shadowColor="#FF5722"
        android:text="Entrar"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FF5722"
        android:textColorHint="#FF5722"
        android:textColorLink="#FF5722"
        android:textCursorDrawable="@android:color/holo_orange_dark"
        android:textSize="18sp" />
</LinearLayout>